Reorganize directory structure in preparation for Webpack

--- a/src/frontend/pages/academics/index.css
+++ b/src/frontend/pages/academics/index.css
@@ -11,7 +11,8 @@
 	padding-bottom: 0px;
 }
 
-.panel-heading, .panel-footer {
+.panel-heading,
+.panel-footer {
 	padding-top: 1px;
 	padding-bottom: 3px;
 	background: white;
