--- a/src/frontend/pages/academics/index.pug
+++ b/src/frontend/pages/academics/index.pug
@@ -1,4 +1,4 @@
-extends _templates/base.pug
+extends ../../partials/base.pug
 
 mixin course(name, teacher, email, teacherWebsite, moreInformation, syllabus, assignments, description, isHonors, isECE, isAP)
 	- isHonors = isHonors || true
