Format files using Prettier

--- a/src/frontend/pages/extracurriculars/index.css
+++ b/src/frontend/pages/extracurriculars/index.css
@@ -2,12 +2,14 @@ h6 {
 	font-size: 12pt;
 }
 
-.coachingStaffTitle, .leader {
+.coachingStaffTitle,
+.leader {
 	margin-top: 0;
 	margin-bottom: 0;
 }
 
-.gameScheduleTitle, .position {
+.gameScheduleTitle,
+.position {
 	margin-bottom: 0em;
 }
 
@@ -15,26 +17,28 @@ h6 {
 	color: #444444;
 }
 
-.coachingStaff, .gameSchedule, .position {
+.coachingStaff,
+.gameSchedule,
+.position {
 	font-size: 10.25pt;
 }
 
 .league {
-	margin-top: -.6em;
+	margin-top: -0.6em;
 	font-size: 9.25pt;
 	color: #666666;
 }
 
 .position {
-	margin-top: -.5em;
+	margin-top: -0.5em;
 }
 
 .leaderInformation {
-	margin: .35em 0em .35em;
+	margin: 0.35em 0em 0.35em;
 }
 
 .leaderInformation > span {
-	margin-right: .35em;
+	margin-right: 0.35em;
 }
 
 .sy-slide {
