--- a/src/frontend/pages/home/index.css
+++ b/src/frontend/pages/home/index.css
@@ -2,13 +2,13 @@
 	width: 100%;
 	height: 4rem;
 	background-color: #e51c23;
-	padding: .6em;
+	padding: 0.6em;
 	font-family: inherit;
 	font-weight: 100;
 	text-align: center;
-}		
-		
-.announcements p {		
+}
+
+.announcements p {
 	height: 100%;
 	margin: 0em;
 	padding-right: 2.5%;
@@ -28,7 +28,7 @@
 	background-color: #e51c23;
 	width: 100%;
 	margin-bottom: 5rem;
-	padding: .6em;
+	padding: 0.6em;
 	font-family: inherit;
 	font-weight: 100;
 	box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.2);
@@ -41,7 +41,7 @@
 
 .banner-strip a {
 	color: #e51c23;
-	margin-left: .5em;
+	margin-left: 0.5em;
 }
 
 @media (min-width: 768px) {
@@ -93,9 +93,9 @@
 }
 
 .sy-controls li a:after {
-	background-image: url("/assets/img/arrows.svg") !important;
+	background-image: url("/../media/arrows.svg") !important;
 }
 
 .sy-box.sy-loading {
-	background-image: url("/assets/img/sy-loader.gif") 50% 50% no-repeat !important;
+	background-image: url("/../media/sy-loader.gif") 50% 50% no-repeat !important;
 }
