--- a/src/frontend/pages/alumni/index.pug
+++ b/src/frontend/pages/alumni/index.pug
@@ -2,15 +2,13 @@ extends ../../partials/base.pug
 
 mixin avatar(image, name, information)
 	.avatar
-		.avatar-image(style=`background-image: url(${image});`)
+		.avatar-image(style="background-image: url(" + image + ");")
 		.avatar-body
 			h4.title= name
 			h5.subtitle= information
 
 block head
 	title Alumni | UHSSE
-	link(rel="stylesheet" href="/assets/css/alumni.css" defer)
-	//- script(src="assets/js/prospective.js" defer)
 
 block body
 	+header(banner, name, lead)
