--- a/src/frontend/partials/base.pug
+++ b/src/frontend/partials/base.pug
@@ -26,18 +26,17 @@ html(lang="en")
 		meta(name="viewport" content="width=device-width,initial-scale=1")
 		link(rel="stylesheet" href="https://bootswatch.com/3/paper/bootstrap.min.css")
 		link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css")
-		link(rel="stylesheet" href="assets/css/theme.css")
-		link(rel="icon" type="image/ico" href="/not_real.ico" sizes="32x32")
-		link(rel="apple-touch-icon" href="/not_real.png" sizes="128x128")
-		script(src="https://cdnjs.cloudflare.com/ajax/libs/floatthead/2.0.3/jquery.floatThead.min.js" defer)
-		script(src="assets/js/app.js" defer)
 		block head
 	body
 		include navbar.pug
+		
 		block body
+		
 		a#jump(title="Jump to top of page." style="display: none;")
 			span.glyphicon.glyphicon-chevron-up
+		
 		include footer.pug
-		//- Use SRI (Sub Resource Integrity) to make sure imported code hasn't been tampered with
-		script(src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous")
-		script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous")
+
+		script(src="https://code.jquery.com/jquery-3.1.1.min.js" defer)
+		script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" defer)
+		script(src="https://cdnjs.cloudflare.com/ajax/libs/floatthead/2.0.3/jquery.floatThead.min.js" defer)
