--- a/src/frontend/partials/navbar.pug
+++ b/src/frontend/partials/navbar.pug
@@ -1,32 +1,26 @@
-nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
-	.container-fluid
-		.navbar-header
-			//- Hamburger menu
-			button.navbar-toggle.collapsed.pull-left(data-toggle="collapse", data-target="#navbar-links")
-				span.sr-only Toggle Navigation
-				//- Repeated three times because each makes up a line in the hamburger
-				span.icon-bar
-				span.icon-bar
-				span.icon-bar
-			a.navbar-brand(href="/")= navbar.brand
-			each icon in navbar.icons
-				a.navbar-icon(href=icon.link target="_blank")
-					image.navbar-icon(src=icon.image style="width: " + icon.size + "; height: auto;")
-		div.collapse.navbar-collapse#navbar-links
-			ul.nav.navbar-nav.navbar-right
-				each link in navbar.links
-					if link.subLinks instanceof Array
-						//- Dropdown required
-						li.dropdown
-							a.dropdown-toggle(href=link.path data-toggle="dropdown") #{link.name} #[span.caret]
-							ul.dropdown-menu
-								each subLink in link.subLinks
-									li
-										a.nav-link(href=link.path + "#" + subLink.nav)= subLink.name
-					else
-						li
-							a.nav-link(href=link.path)= link.name
-				
-				li.btn-nav
-					div
-						a.btn.btn-danger.navbar-btn(href=navbar.button.link)= navbar.button.text
+nav#navbar.navbar(role="navigation" aria-label="main navigation")
+	.navbar-brand
+		a.navbar-item(href="/")
+			h1.title.is-4= navbar.brand
+
+		a.navbar-burger.burger(role="button" aria-label="menu" aria-expanded="false" data-target="navbar")
+			span(aria-hidden="true")
+			span(aria-hidden="true")
+			span(aria-hidden="true")
+	
+	#navbarMenu.navbar-menu
+		.navbar-end
+			each link in navbar.links
+				if link.subLinks instanceof Array
+					.navbar-item.has-dropdown.is-hoverable
+						a.navbar-link(href=link.path)= link.name
+						
+						.navbar-dropdown
+							each subLink in link.subLinks
+								a.navbar-item(href=link.path + "#" + subLink.nav)= subLink.name
+				else
+					a.navbar-item(href=link.path)= link.name
+			
+			.buttons
+				a.button.is-primary(href=navbar.button.link)
+					b= navbar.button.text
