--- a/src/frontend/partials/footer.pug
+++ b/src/frontend/partials/footer.pug
@@ -1,4 +1,15 @@
-p.text-center#footer © {{year}} University High School of Science and Engineering Deca Class. #[br] Originally developed by #[a(href="http://berenson.me" target="_blank") Spencer Berenson] and #[a(href="http://duro.me" target="_blank") Andi Duro]. Initial design by #[a(href="https://github.com/tpatel1781" target="_blank") Tej Patel]. #[br] Maintained and updated by #[a(href="https://github.com/LeoPiGuy") Leo Gold].
-script.
-	let footer=document.getElementById("footer");
-	footer.innerHTML=footer.innerHTML.replace(/{{year}}/i, new Date().getFullYear());
+include ./utils.pug
+
+footer.footer
+	.content.has-text-centered
+		| © #{new Date().getFullYear()} University High School of Science and Engineering Deca Class.
+		
+		br
+		
+		| Originally developed by #[+link("https://berenson.me", true) Spencer Berenson]
+		| and #[+link("http://duro.me", true) Andi Duro].
+		| Initial design by #[+link("https://github.com/tpatel1781", true) Tej Patel].
+		
+		br
+
+		| Maintained and updated by #[+link("https://github.com/LeoPiGuy", true) Leo Gold].
