--- a/src/frontend/pages/home/index.pug
+++ b/src/frontend/pages/home/index.pug
@@ -1,68 +1,67 @@
 extends ../../partials/base.pug
-			
-mixin quality(backgroundColor, glyph, name, description)
-	.quality
-		.icon(style="background-color: " + backgroundColor + "};")
-			span.glyphicon(class=glyph)
-		.body
-			h4= name
-			p= description
+include ../../partials/utils.pug
 
-mixin ptconferences
-	.quality
-		.icon(style=`background-color: #f06a6a;`)
-			span.glyphicon(class="glyphicon-th-list")
-		.body
-			h4="Parent Teacher Conferences"
-			p.
-				Thursday January 25th 1-3pm and 5-7pm		
-			p(style="margin-top: -1em;").
-				Sign Up <a href="http://www.signupgenius.com/go/20f0e4fa8af2ea1f85-university3" target="_blank">Here</a>.
-
+mixin pillar(icon, name, description)
+	.media
+		.media-left.is-further-spaced
+			span.icon.is-extra-large.is-rounded.has-background-primary.has-text-white(style="border-radius: 100%;")
+				i.fas(class=`fa-${icon} fa-2x`)
+		p.media-content
+			strong.is-size-5.has-text-weight-semibold= name
+			br
+			= description
 
 block head
-	title UHSSE
-	link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slippry/1.4.0/slippry.min.css")
+	+title("Home")
 
 block body
-	aside.announcements
-		p.text-white.text-center(data-announcements=announcements)
-	+header(banners, name, phrase, announcements)
-	.banner-strip
-		p.text-white.text-center
-			| 351 Mark Twain Drive, Hartford CT 06112 
-			a.btn.btn-default(href="https://goo.gl/maps/1trdfAtqE4A2" target="_blank") #[span.glyphicon.glyphicon-road] Get Directions
-
-			-
-				String.prototype.replaceAll = function(search, replacement) {
-					let target = this;
-					return target.split(search).join(replacement);
-				};
-
-				function createTelLink(phoneNumber) {
-					return "tel:+1" + phoneNumber.replaceAll(")", "").replaceAll("(", "").replaceAll(".", "").replaceAll("-", "").replaceAll(" ", "");
-				}
-
-			a.btn.btn-default(href=createTelLink(phoneNumber) target="_blank") #[span.glyphicon.glyphicon-phone-alt] #{phoneNumber}
+	+banner(image)
+		+banner-body(name, lead)
+			.buttons.is-pulled-right
+				.level-right
+					a.button.is-primary.is-inverted.is-outlined(href="https://goo.gl/maps/1trdfAtqE4A2" target="_blank" rel="noopener noreferrer")
+						span.icon
+							i.fas.fa-map-marker-alt
+						span Get Directions
+					a.button.is-primary.is-inverted.is-outlined(href=`tel:+1${phoneNumber}`)
+						span.icon
+							i.fas.fa-phone
+						span= phoneNumber
 	
-	.container
-		#about.row
-			.col-md-6.hidden-xs.hidden-sm
-				ul#gallery
-					each image in gallery
-						li
-							a(href=image.link || "javascript:void(0);" target="_blank")
-								img.img-responsive(src=image.src alt=image.caption)
-			.col-md-5.col-md-offset-1
-				//-+ptconferences
-				each quality in qualities
-					+quality(quality.backgroundColor, quality.glyph, quality.name, quality.description)
+	section.section.container
+		.level.columns.is-variable.is-7
+			.column.is-hidden-mobile
+				.carousel.carousel-animated.carousel-animate-fade(data-autoplay="true")
+					ul.carousel-container
+						each image in gallery
+							li.carousel-item.has-background
+								if image.link.startsWith("http")
+									img.is-background(src=image.link alt=image.link)
+								else
+									img.is-background(src=`${require(`../../media/${image.link}`)}` alt=image.link)
+								
+								if image.caption
+									.title= image.caption
+					.carousel-navigation.is-overlay
+						.carousel-nav-left
+							i.fa.fa-chevron-left(aria-hidden=true)
+						.carousel-nav-right
+							i.fa.fa-chevron-right(aria-hidden=true)
+			.column.is-half
+				each pillar in pillars
+					+pillar(pillar.icon, pillar.name, pillar.description)
 
-		hr
+	section.section.container
+		h1.title.is-4.is-size-3-desktop School Events
 
-		+innerSection("School Events")
-			#calendar.embed-responsive.embed-responsive-16by9
-					iframe.embed-responsive.item(frameborder="0" src="https://calendar.google.com/calendar/embed?src=oaomn16s4itdvibnciuc45386k%40group.calendar.google.com&ctz=America/New_York")
-	
-	script(src="https://cdnjs.cloudflare.com/ajax/libs/notify/0.4.2/notify.min.js" defer)
-	script(src="https://cdnjs.cloudflare.com/ajax/libs/slippry/1.4.0/slippry.min.js" defer)
+		.columns.is-variable.is-7
+			.column.is-one-third
+					.message.is-small
+						.message-header Announcements
+						ul.message-body
+							each announcement, index in announcements
+								li= announcement
+								if index !== announcements.length - 1
+									br
+			.column
+				iframe(src="https://calendar.google.com/calendar/embed?src=oaomn16s4itdvibnciuc45386k%40group.calendar.google.com&ctz=America/New_York" width="100%" height="650")
