--- a/src/frontend/pages/home/index.pug
+++ b/src/frontend/pages/home/index.pug
@@ -19,49 +19,49 @@ block body
 		+banner-body(name, lead)
 			.buttons.is-pulled-right
 				.level-right
-					a.button.is-primary.is-inverted.is-outlined(href="https://goo.gl/maps/1trdfAtqE4A2" target="_blank" rel="noopener noreferrer")
+					+link("https://goo.gl/maps/1trdfAtqE4A2", true, "button is-primary is-inverted is-outlined")
 						span.icon
 							i.fas.fa-map-marker-alt
 						span Get Directions
-					a.button.is-primary.is-inverted.is-outlined(href=`tel:+1${phoneNumber}`)
+
+					+link(`tel:+1${phoneNumber}`, false, "button is-primary is-inverted is-outlined")
 						span.icon
 							i.fas.fa-phone
 						span= phoneNumber
 	
-	section.section.container
-		.level.columns.is-variable.is-7
-			.column.is-hidden-mobile
-				.carousel.carousel-animated.carousel-animate-fade(data-autoplay="true")
-					ul.carousel-container
-						each image in gallery
-							li.carousel-item.has-background
-								if image.link.startsWith("http")
-									img.is-background(src=image.link alt=image.link)
-								else
-									img.is-background(src=`${require(`../../media/${image.link}`)}` alt=image.link)
-								
-								if image.caption
-									.title= image.caption
-					.carousel-navigation.is-overlay
-						.carousel-nav-left
-							i.fa.fa-chevron-left(aria-hidden=true)
-						.carousel-nav-right
-							i.fa.fa-chevron-right(aria-hidden=true)
-			.column.is-half
-				each pillar in pillars
-					+pillar(pillar.icon, pillar.name, pillar.description)
+	.container
+		+section()
+			.level.columns.is-variable.is-7
+				.column.is-hidden-mobile
+					.carousel.carousel-animated.carousel-animate-fade(data-autoplay="true")
+						ul.carousel-container
+							each image in gallery
+								li.carousel-item.has-background
+									if image.link.startsWith("http")
+										img.is-background(src=image.link alt=image.link)
+									else
+										img.is-background(src=`${require(`../../media/${image.link}`)}` alt=image.link)
+									
+									if image.caption
+										.title= image.caption
+						.carousel-navigation.is-overlay
+							.carousel-nav-left
+								i.fa.fa-chevron-left(aria-hidden=true)
+							.carousel-nav-right
+								i.fa.fa-chevron-right(aria-hidden=true)
+				.column.is-half
+					each pillar in pillars
+						+pillar(pillar.icon, pillar.name, pillar.description)
 
-	section.section.container
-		h1.title.is-4.is-size-3-desktop School Events
-
-		.columns.is-variable.is-7
-			.column.is-one-third
+		+section("School Events", null, "schoolEvents")
+			.columns.is-variable.is-7
+				.column.is-one-third
 					.message.is-small
-						.message-header Announcements
+						b.message-header Announcements
 						ul.message-body
 							each announcement, index in announcements
 								li= announcement
 								if index !== announcements.length - 1
 									br
-			.column
-				iframe(src="https://calendar.google.com/calendar/embed?src=oaomn16s4itdvibnciuc45386k%40group.calendar.google.com&ctz=America/New_York" width="100%" height="650")
+				.column
+					+iframe("https://calendar.google.com/calendar/embed?src=oaomn16s4itdvibnciuc45386k%40group.calendar.google.com&ctz=America/New_York")
