--- a/src/frontend/partials/utils.pug
+++ b/src/frontend/partials/utils.pug
@@ -1,5 +1,5 @@
-mixin link(link, tab)
-	a(href=link target=tab ? "_blank" : tab rel="noopener noreferrer")
+mixin link(link, tab, classes)
+	a(class=classes href=link target=tab ? "_blank" : tab rel="noopener noreferrer")
 		block
 
 mixin title(title)
@@ -22,7 +22,21 @@ mixin banner-body(name, lead)
 
 				block
 
-mixin banner-foot()
-	.hero-foot.has-background-primary
-		.container
-			block
+mixin body(name, lead, image)
+	+banner(image)
+		+banner-body(name, lead)
+
+	.container
+		block
+
+mixin section(name, lead, anchorId)
+	section.section(id=anchorId)
+		if name
+			h1.title.is-4.is-size-3-desktop= name
+		if lead
+			h1.subtitle.is-6.is-size-5-desktop= lead
+		
+		block
+
+mixin iframe(source)
+	iframe(src=source width="100%" height=650)
