--- a/src/frontend/styles/shared.scss
+++ b/src/frontend/styles/shared.scss
@@ -28,3 +28,17 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts" !default;
 		border-radius: 100%;
 	}
 }
+
+.tabs-content > ul > li {
+	display: none;
+	list-style: none;
+}
+
+.tabs-content > ul > li.is-active {
+	display: block;
+}
+
+.table-scroll {
+	max-height: 20rem;
+	overflow-y: auto;
+}
