--- a/src/frontend/styles/shared.scss
+++ b/src/frontend/styles/shared.scss
@@ -32,10 +32,10 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts" !default;
 .tabs-content > ul > li {
 	display: none;
 	list-style: none;
-}
 
-.tabs-content > ul > li.is-active {
-	display: block;
+	&.is-active {
+		display: block;
+	}
 }
 
 .table-scroll {
