--- a/src/frontend/pages/information/index.pug
+++ b/src/frontend/pages/information/index.pug
@@ -17,6 +17,8 @@ block head
 	+title("Information")
 
 block body
+	- const isEmptyObject = (object) => Object.values(object).every(x => !x);
+
 	+body(name, lead, image)
 		+section(contacts.name, contacts.lead, contacts.anchorId)
 			.tabs-wrapper
@@ -76,6 +78,7 @@ block body
 				.tabs
 					ul
 						li.is-active #[a PTO]
+						li #[a After Grad Party]
 				
 				.tabs-content
 					ul
@@ -108,3 +111,47 @@ block body
 										each fundraiser in pto.fundraisers
 											li
 												+link(fundraiser.link, true)= fundraiser.name
+						
+						li
+							.columns
+								- const afterGrad = parentOrganizations.afterGrad;
+								+card("Meeting Dates", true)
+									p= afterGrad.meetingDates.description
+									b.has-text-weight-semibold= Schedule
+									ul
+										each date in afterGrad.meetingDates.dates
+											li= date
+								
+								+card("Donation Forms", true)
+									ul
+										each form in afterGrad.donationForms
+											li
+												+link(form.link, true)= form.name
+								
+								+card("How Can You Help?", true)
+									ul
+										each aid in afterGrad.aids
+											li
+												+link(aid.link, true)= aid.name
+								
+								+card("Updates")
+									ul
+										each update in afterGrad.updates
+											li
+												+link(update.link, true)= update.name
+								
+								if afterGrad.officers.length && !isEmptyObject(afterGrad.officers[0])
+									+card("Officers")
+										.field.is-grouped.is-grouped-multiline
+											each officer in afterGrad.officers
+													.control
+														.tags.has-addons
+															span.tag= officer.position
+															+link(`mailto:${officer.email}`, false, "tag is-primary")= officer.name
+
+								if afterGrad.meetingMinutes.length && !isEmptyObject(afterGrad.meetingMinutes[0])
+									+card("Meeting Minutes")
+										ul
+											each minute in afterGrad.meetingMinutes
+												li
+													+link(minute.link, true)= minute.text
