Add General Resources section to Information

--- a/src/frontend/pages/information/index.pug
+++ b/src/frontend/pages/information/index.pug
@@ -182,3 +182,6 @@ block body
 													td= member.position
 													td
 														+link(`mailto:${member.email}`, false)= member.email
+
+		+section(resources.name, resources.lead, resources.anchorId)
+			
