Add anchorId to first Home page section

--- a/src/frontend/pages/home/index.pug
+++ b/src/frontend/pages/home/index.pug
@@ -29,7 +29,7 @@ block body
 						span= phoneNumber
 	
 	.container
-		+section()
+		+section(null, null, "about")
 			.level.columns.is-variable.is-7
 				.column.is-hidden-mobile
 					.carousel.carousel-animated.carousel-animate-fade(data-autoplay="true")
