Add lead to School Events section of Home page

--- a/src/frontend/pages/home/index.pug
+++ b/src/frontend/pages/home/index.pug
@@ -52,7 +52,7 @@ block body
 					each pillar in pillars
 						+pillar(pillar.icon, pillar.name, pillar.description)
 
-		+section("School Events", null, "schoolEvents")
+		+section("School Events", "News flash", "schoolEvents")
 			.columns.is-variable.is-7
 				.column.is-one-third
 					.message.is-small
