Fix hero background image not darkening in IE

--- a/src/frontend/partials/mixins.pug
+++ b/src/frontend/partials/mixins.pug
@@ -8,7 +8,7 @@ mixin title(title)
 	title= `${title} | UHSSE`
 
 mixin banner(image)
-	header.hero.is-medium.has-background-image(style=`background-image: url(${require(`../../media/${image}`)});`)
+	header.hero.is-medium.has-background-image(style=`background: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url(${require(`../../media/${image}`)});`)
 		block
 
 mixin banner-head()
