Fix Siema noscript style modification

--- a/src/frontend/pages/home/index.pug
+++ b/src/frontend/pages/home/index.pug
@@ -15,7 +15,7 @@ block head
 
 block noscript-head
 	style.
-		.siema:not(:first-child) {
+		.siema > li:not(:first-child) {
 			display: none;
 		}
 
