--- a/src/frontend/pages/counseling/index.pug
+++ b/src/frontend/pages/counseling/index.pug
@@ -43,7 +43,7 @@ block body
 						if !isEmptyObject(about.links)
 							//- TODO: Render list group of links
 						else
-							+message("warning", null, "There are no links available. Check back later!")
+							+message(null, "There are no links available. Check back later!")(class="is-warning")
 
 		+section(studentInformation.name, studentInformation.lead, studentInformation.anchorId)
 			.columns.is-variable.is-8.is-reversed-mobile
