--- a/src/frontend/partials/mixins/all.pug
+++ b/src/frontend/partials/mixins/all.pug
@@ -1,5 +1,5 @@
 - const isEmptyObject = (object) => Object.values(object).every(x => !x);
-- const isEmptyObjectArray = (array) => !array.length && isEmptyObject(array[0])
+- const isEmptyObjectArray = (array) => !array.length || isEmptyObject(array[0])
 
 mixin title(title)
 	title= `${title} | UHSSE`
