--- a/src/frontend/partials/mixins/all.pug
+++ b/src/frontend/partials/mixins/all.pug
@@ -41,3 +41,5 @@ include message.pug
 mixin link(link, tab)
 	a(class!=attributes.class href=link target=tab ? "_blank" : tab rel="noopener noreferrer")
 		block
+
+include icon.pug
