Avoid double-escaping bulma-icon mixin's class attribute

--- a/src/frontend/partials/mixins/icon.pug
+++ b/src/frontend/partials/mixins/icon.pug
@@ -3,7 +3,7 @@ mixin icon(name)
 		+fa-icon(name)
 
 mixin bulma-icon()
-	span.icon(class=attributes.class)
+	span.icon(class!=attributes.class)
 		block
 
 mixin fa-icon(name, size)
